--- a/全部接口.md
+++ b/全部接口.md
@@ -4,7 +4,7 @@
 **简介**:WIC EDU KG API 文档
 
 
-**HOST**:http://127.0.0.1:8080
+**HOST**:http://localhost:8080
 
 
 **联系人**:WIC Team
@@ -2259,6 +2259,717 @@
 	"message": "邮箱格式不正确",
 	"path": "/api/users",
 	"timestamp": ""
+}
+```
+
+
+# 留言管理
+
+
+## 获取所有留言
+
+
+**接口地址**:`/api/admin/messages`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>获取所有留言，可按状态筛选</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|status|状态筛选: 0-待审核, 1-已发布, 2-已拒绝|query|false|integer(int32)||
+|keyword|关键词搜索|query|false|string||
+|page|页码|query|false|integer(int32)||
+|size|每页数量|query|false|integer(int32)||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|ResultPageSeniorMessageVO|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|code||integer(int32)|integer(int32)|
+|message||string||
+|data||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;records||array|SeniorMessageVO|
+|&emsp;&emsp;&emsp;&emsp;id|ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;content|留言内容|string||
+|&emsp;&emsp;&emsp;&emsp;signature|署名|string||
+|&emsp;&emsp;&emsp;&emsp;cardColor|便签颜色|string||
+|&emsp;&emsp;&emsp;&emsp;inkColor|墨水颜色|string||
+|&emsp;&emsp;&emsp;&emsp;font||FontInfo|FontInfo|
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;id|字体ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;name|字体名称|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;cssClass|CSS类名|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;fontFamily|font-family值|string||
+|&emsp;&emsp;&emsp;&emsp;likeCount|点赞数|integer(int32)||
+|&emsp;&emsp;&emsp;&emsp;liked|当前用户是否已点赞|boolean||
+|&emsp;&emsp;&emsp;&emsp;createdAt|创建时间|string(date-time)||
+|&emsp;&emsp;total||integer(int64)||
+|&emsp;&emsp;size||integer(int64)||
+|&emsp;&emsp;current||integer(int64)||
+|&emsp;&emsp;orders||array|OrderItem|
+|&emsp;&emsp;&emsp;&emsp;column||string||
+|&emsp;&emsp;&emsp;&emsp;asc||boolean||
+|&emsp;&emsp;optimizeCountSql||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;searchCount||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;optimizeJoinOfCountSql||boolean||
+|&emsp;&emsp;maxLimit||integer(int64)||
+|&emsp;&emsp;countId||string||
+|&emsp;&emsp;pages||integer(int64)||
+
+
+**响应示例**:
+```javascript
+{
+	"code": 0,
+	"message": "",
+	"data": {
+		"records": [
+			{
+				"id": 0,
+				"content": "",
+				"signature": "",
+				"cardColor": "",
+				"inkColor": "",
+				"font": {
+					"id": 0,
+					"name": "",
+					"cssClass": "",
+					"fontFamily": ""
+				},
+				"likeCount": 0,
+				"liked": true,
+				"createdAt": ""
+			}
+		],
+		"total": 0,
+		"size": 0,
+		"current": 0,
+		"orders": [
+			{
+				"column": "",
+				"asc": true
+			}
+		],
+		"optimizeCountSql": {},
+		"searchCount": {},
+		"optimizeJoinOfCountSql": true,
+		"maxLimit": 0,
+		"countId": "",
+		"pages": 0
+	}
+}
+```
+
+
+## 删除留言
+
+
+**接口地址**:`/api/admin/messages/{id}`
+
+
+**请求方式**:`DELETE`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>删除任意留言</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|id|留言ID|path|true|integer(int64)||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|操作成功|ResultVoid|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|code||integer(int32)|integer(int32)|
+|message||string||
+|data||object||
+
+
+**响应示例**:
+```javascript
+{
+	"code": 0,
+	"message": "",
+	"data": {}
+}
+```
+
+
+## 审核通过
+
+
+**接口地址**:`/api/admin/messages/{id}/approve`
+
+
+**请求方式**:`PUT`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>通过留言审核</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|id|留言ID|path|true|integer(int64)||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|操作成功|ResultVoid|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|code||integer(int32)|integer(int32)|
+|message||string||
+|data||object||
+
+
+**响应示例**:
+```javascript
+{
+	"code": 0,
+	"message": "",
+	"data": {}
+}
+```
+
+
+## 审核拒绝
+
+
+**接口地址**:`/api/admin/messages/{id}/reject`
+
+
+**请求方式**:`PUT`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>拒绝留言审核</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|id|留言ID|path|true|integer(int64)||
+|reason|拒绝原因|query|false|string||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|操作成功|ResultVoid|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|code||integer(int32)|integer(int32)|
+|message||string||
+|data||object||
+
+
+**响应示例**:
+```javascript
+{
+	"code": 0,
+	"message": "",
+	"data": {}
+}
+```
+
+
+## 修改留言状态
+
+
+**接口地址**:`/api/admin/messages/{id}/status`
+
+
+**请求方式**:`PUT`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>直接修改留言状态</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|id|留言ID|path|true|integer(int64)||
+|status|新状态: 0-待审核, 1-已发布, 2-已拒绝|query|true|integer(int32)||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|操作成功|ResultVoid|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|code||integer(int32)|integer(int32)|
+|message||string||
+|data||object||
+
+
+**响应示例**:
+```javascript
+{
+	"code": 0,
+	"message": "",
+	"data": {}
+}
+```
+
+
+## 批量删除
+
+
+**接口地址**:`/api/admin/messages/batch`
+
+
+**请求方式**:`DELETE`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded,application/json`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>批量删除多条留言</p>
+
+
+
+**请求示例**:
+
+
+```javascript
+[]
+```
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|integers|integer|body|true|array||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|操作成功|ResultInteger|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|code||integer(int32)|integer(int32)|
+|message||string||
+|data||integer(int32)|integer(int32)|
+
+
+**响应示例**:
+```javascript
+{
+	"code": 0,
+	"message": "",
+	"data": 0
+}
+```
+
+
+## 批量审核通过
+
+
+**接口地址**:`/api/admin/messages/batch/approve`
+
+
+**请求方式**:`PUT`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded,application/json`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>批量通过多条留言</p>
+
+
+
+**请求示例**:
+
+
+```javascript
+[]
+```
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|integers|integer|body|true|array||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|操作成功|ResultInteger|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|code||integer(int32)|integer(int32)|
+|message||string||
+|data||integer(int32)|integer(int32)|
+
+
+**响应示例**:
+```javascript
+{
+	"code": 0,
+	"message": "",
+	"data": 0
+}
+```
+
+
+## 批量审核拒绝
+
+
+**接口地址**:`/api/admin/messages/batch/reject`
+
+
+**请求方式**:`PUT`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded,application/json`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>批量拒绝多条留言</p>
+
+
+
+**请求示例**:
+
+
+```javascript
+[]
+```
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|integers|integer|body|true|array||
+|reason|拒绝原因|query|false|string||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|操作成功|ResultInteger|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|code||integer(int32)|integer(int32)|
+|message||string||
+|data||integer(int32)|integer(int32)|
+
+
+**响应示例**:
+```javascript
+{
+	"code": 0,
+	"message": "",
+	"data": 0
+}
+```
+
+
+## 获取待审核留言
+
+
+**接口地址**:`/api/admin/messages/pending`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>获取所有待审核的留言</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|page|页码|query|false|integer(int32)||
+|size|每页数量|query|false|integer(int32)||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|ResultPageSeniorMessageVO|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|code||integer(int32)|integer(int32)|
+|message||string||
+|data||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;records||array|SeniorMessageVO|
+|&emsp;&emsp;&emsp;&emsp;id|ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;content|留言内容|string||
+|&emsp;&emsp;&emsp;&emsp;signature|署名|string||
+|&emsp;&emsp;&emsp;&emsp;cardColor|便签颜色|string||
+|&emsp;&emsp;&emsp;&emsp;inkColor|墨水颜色|string||
+|&emsp;&emsp;&emsp;&emsp;font||FontInfo|FontInfo|
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;id|字体ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;name|字体名称|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;cssClass|CSS类名|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;fontFamily|font-family值|string||
+|&emsp;&emsp;&emsp;&emsp;likeCount|点赞数|integer(int32)||
+|&emsp;&emsp;&emsp;&emsp;liked|当前用户是否已点赞|boolean||
+|&emsp;&emsp;&emsp;&emsp;createdAt|创建时间|string(date-time)||
+|&emsp;&emsp;total||integer(int64)||
+|&emsp;&emsp;size||integer(int64)||
+|&emsp;&emsp;current||integer(int64)||
+|&emsp;&emsp;orders||array|OrderItem|
+|&emsp;&emsp;&emsp;&emsp;column||string||
+|&emsp;&emsp;&emsp;&emsp;asc||boolean||
+|&emsp;&emsp;optimizeCountSql||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;searchCount||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;optimizeJoinOfCountSql||boolean||
+|&emsp;&emsp;maxLimit||integer(int64)||
+|&emsp;&emsp;countId||string||
+|&emsp;&emsp;pages||integer(int64)||
+
+
+**响应示例**:
+```javascript
+{
+	"code": 0,
+	"message": "",
+	"data": {
+		"records": [
+			{
+				"id": 0,
+				"content": "",
+				"signature": "",
+				"cardColor": "",
+				"inkColor": "",
+				"font": {
+					"id": 0,
+					"name": "",
+					"cssClass": "",
+					"fontFamily": ""
+				},
+				"likeCount": 0,
+				"liked": true,
+				"createdAt": ""
+			}
+		],
+		"total": 0,
+		"size": 0,
+		"current": 0,
+		"orders": [
+			{
+				"column": "",
+				"asc": true
+			}
+		],
+		"optimizeCountSql": {},
+		"searchCount": {},
+		"optimizeJoinOfCountSql": true,
+		"maxLimit": 0,
+		"countId": "",
+		"pages": 0
+	}
+}
+```
+
+
+## 获取统计信息
+
+
+**接口地址**:`/api/admin/messages/stats`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>获取留言各状态数量统计</p>
+
+
+
+**请求参数**:
+
+
+暂无
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|ResultMessageStats|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|code||integer(int32)|integer(int32)|
+|message||string||
+|data||MessageStats|MessageStats|
+|&emsp;&emsp;pending||integer(int64)||
+|&emsp;&emsp;published||integer(int64)||
+|&emsp;&emsp;rejected||integer(int64)||
+|&emsp;&emsp;total||integer(int64)||
+
+
+**响应示例**:
+```javascript
+{
+	"code": 0,
+	"message": "",
+	"data": {
+		"pending": 0,
+		"published": 0,
+		"rejected": 0,
+		"total": 0
+	}
 }
 ```
 
@@ -7216,123 +7927,6 @@
 ```
 
 
-## 获取用户公开信息
-
-
-**接口地址**:`/api/users/{studentId}`
-
-
-**请求方式**:`GET`
-
-
-**请求数据类型**:`application/x-www-form-urlencoded`
-
-
-**响应数据类型**:`*/*`
-
-
-**接口描述**:<p>根据学号获取用户的公开名片信息</p>
-
-
-
-**请求参数**:
-
-
-| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
-| -------- | -------- | ----- | -------- | -------- | ------ |
-|studentId|学号|path|true|string||
-
-
-**响应状态**:
-
-
-| 状态码 | 说明 | schema |
-| -------- | -------- | ----- | 
-|200|获取成功|UserCardVO|
-|404|用户不存在|ApiResponseUserCardVO|
-
-
-**响应状态码-200**:
-
-
-**响应参数**:
-
-
-| 参数名称 | 参数说明 | 类型 | schema |
-| -------- | -------- | ----- |----- | 
-|studentId|学号|string||
-|name|姓名|string||
-|email|邮箱|string||
-|avatar|头像URL|string||
-|department|院系|string||
-|major|专业|string||
-|bio|个人简介|string||
-|roleName|角色名称|string||
-|joinedAt|加入时间|string(date-time)|string(date-time)|
-
-
-**响应示例**:
-```javascript
-{
-	"studentId": "",
-	"name": "",
-	"email": "",
-	"avatar": "",
-	"department": "",
-	"major": "",
-	"bio": "",
-	"roleName": "",
-	"joinedAt": ""
-}
-```
-
-
-**响应状态码-404**:
-
-
-**响应参数**:
-
-
-| 参数名称 | 参数说明 | 类型 | schema |
-| -------- | -------- | ----- |----- | 
-|data||UserCardVO|UserCardVO|
-|&emsp;&emsp;studentId|学号|string||
-|&emsp;&emsp;name|姓名|string||
-|&emsp;&emsp;email|邮箱|string||
-|&emsp;&emsp;avatar|头像URL|string||
-|&emsp;&emsp;department|院系|string||
-|&emsp;&emsp;major|专业|string||
-|&emsp;&emsp;bio|个人简介|string||
-|&emsp;&emsp;roleName|角色名称|string||
-|&emsp;&emsp;joinedAt|加入时间|string(date-time)||
-|error|错误码（仅错误时返回）|string||
-|message|错误消息（仅错误时返回）|string||
-|path|请求路径（仅错误时返回）|string||
-|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
-
-
-**响应示例**:
-```javascript
-{
-	"data": {
-		"studentId": "",
-		"name": "",
-		"email": "",
-		"avatar": "",
-		"department": "",
-		"major": "",
-		"bio": "",
-		"roleName": "",
-		"joinedAt": ""
-	},
-	"error": "VALIDATION_ERROR",
-	"message": "邮箱格式不正确",
-	"path": "/api/users",
-	"timestamp": ""
-}
-```
-
-
 ## 获取当前用户信息
 
 
@@ -8180,13 +8774,210 @@
 ```
 
 
+## 获取用户公开信息
+
+
+**接口地址**:`/api/users/public/{studentId}`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>根据学号获取其他用户的公开信息（不包含密码）</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|studentId|学号|path|true|string||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|UserVO|
+|404|用户不存在|ApiResponseUserVO|
+
+
+**响应状态码-200**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|id|用户ID|integer(int64)|integer(int64)|
+|studentId|学号|string||
+|username|用户名|string||
+|name|姓名|string||
+|email|邮箱|string||
+|avatar|头像URL|string||
+|department|院系|string||
+|major|专业|string||
+|bio|个人简介|string||
+|status|状态: 0-未激活, 1-正常, 2-禁用|integer(int32)|integer(int32)|
+|role|角色: 1-组织者, 2-管理员, 3-普通用户|integer(int32)|integer(int32)|
+|roleName|角色名称|string||
+|createdAt|注册时间|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"id": 0,
+	"studentId": "",
+	"username": "",
+	"name": "",
+	"email": "",
+	"avatar": "",
+	"department": "",
+	"major": "",
+	"bio": "",
+	"status": 0,
+	"role": 0,
+	"roleName": "",
+	"createdAt": ""
+}
+```
+
+
+**响应状态码-404**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||UserVO|UserVO|
+|&emsp;&emsp;id|用户ID|integer(int64)||
+|&emsp;&emsp;studentId|学号|string||
+|&emsp;&emsp;username|用户名|string||
+|&emsp;&emsp;name|姓名|string||
+|&emsp;&emsp;email|邮箱|string||
+|&emsp;&emsp;avatar|头像URL|string||
+|&emsp;&emsp;department|院系|string||
+|&emsp;&emsp;major|专业|string||
+|&emsp;&emsp;bio|个人简介|string||
+|&emsp;&emsp;status|状态: 0-未激活, 1-正常, 2-禁用|integer(int32)||
+|&emsp;&emsp;role|角色: 1-组织者, 2-管理员, 3-普通用户|integer(int32)||
+|&emsp;&emsp;roleName|角色名称|string||
+|&emsp;&emsp;createdAt|注册时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"id": 0,
+		"studentId": "",
+		"username": "",
+		"name": "",
+		"email": "",
+		"avatar": "",
+		"department": "",
+		"major": "",
+		"bio": "",
+		"status": 0,
+		"role": 0,
+		"roleName": "",
+		"createdAt": ""
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+## 获取有头像的用户列表
+
+
+**接口地址**:`/api/users/public/avatars`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>返回所有有头像的用户，按注册时间顺序排列，仅包含学号和头像URL</p>
+
+
+
+**请求参数**:
+
+
+暂无
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|ApiResponseListUserAvatarVO|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data|响应数据|array|UserAvatarVO|
+|&emsp;&emsp;studentId|学号|string||
+|&emsp;&emsp;avatar|头像URL|string||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": [
+		{
+			"studentId": "2021001",
+			"avatar": "https://r2.wic.edu.kg/avatars/xxx.jpg"
+		}
+	],
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
 # 用户管理（管理员）
 
 
 ## 查询用户列表
 
 
-**接口地址**:`/api/users`
+**接口地址**:`/api/admin/users`
 
 
 **请求方式**:`GET`
@@ -8432,7 +9223,7 @@
 ## 获取用户详情
 
 
-**接口地址**:`/api/users/{userId}`
+**接口地址**:`/api/admin/users/{userId}`
 
 
 **请求方式**:`GET`
@@ -8576,7 +9367,7 @@
 ## 删除用户
 
 
-**接口地址**:`/api/users/{userId}`
+**接口地址**:`/api/admin/users/{userId}`
 
 
 **请求方式**:`DELETE`
@@ -8624,7 +9415,7 @@
 ## 更新用户信息
 
 
-**接口地址**:`/api/users/{userId}`
+**接口地址**:`/api/admin/users/{userId}`
 
 
 **请求方式**:`PATCH`
@@ -8853,7 +9644,7 @@
 ## 重置用户密码
 
 
-**接口地址**:`/api/users/{userId}/password`
+**接口地址**:`/api/admin/users/{userId}/password`
 
 
 **请求方式**:`PATCH`
@@ -8944,13 +9735,13 @@
 ## 修改用户角色
 
 
-**接口地址**:`/api/users/{userId}/role`
+**接口地址**:`/api/admin/users/{userId}/role`
 
 
 **请求方式**:`PATCH`
 
 
-**请求数据类型**:`application/x-www-form-urlencoded,application/json`
+**请求数据类型**:`application/x-www-form-urlencoded`
 
 
 **响应数据类型**:`*/*`
@@ -8960,26 +9751,13 @@
 
 
 
-**请求示例**:
-
-
-```javascript
-{
-  "userId": 1,
-  "role": 2
-}
-```
-
-
 **请求参数**:
 
 
 | 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
 | -------- | -------- | ----- | -------- | -------- | ------ |
 |userId|用户ID|path|true|integer(int64)||
-|changeRoleRequest|修改用户角色请求|body|true|ChangeRoleRequest|ChangeRoleRequest|
-|&emsp;&emsp;userId|用户ID||true|integer(int64)||
-|&emsp;&emsp;role|新角色：1-组织者，2-管理员，3-普通用户||true|integer(int32)||
+|role|新角色：1-组织者，2-管理员，3-普通用户|query|true|integer(int32)||
 
 
 **响应状态**:
@@ -9076,13 +9854,13 @@
 ## 修改用户状态
 
 
-**接口地址**:`/api/users/{userId}/status`
+**接口地址**:`/api/admin/users/{userId}/status`
 
 
 **请求方式**:`PATCH`
 
 
-**请求数据类型**:`application/x-www-form-urlencoded,application/json`
+**请求数据类型**:`application/x-www-form-urlencoded`
 
 
 **响应数据类型**:`*/*`
@@ -9092,26 +9870,13 @@
 
 
 
-**请求示例**:
-
-
-```javascript
-{
-  "userId": 1,
-  "status": 1
-}
-```
-
-
 **请求参数**:
 
 
 | 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
 | -------- | -------- | ----- | -------- | -------- | ------ |
 |userId|用户ID|path|true|integer(int64)||
-|changeStatusRequest|修改用户状态请求|body|true|ChangeStatusRequest|ChangeStatusRequest|
-|&emsp;&emsp;userId|用户ID||true|integer(int64)||
-|&emsp;&emsp;status|新状态：0-未激活，1-正常，2-禁用||true|integer(int32)||
+|status|新状态：0-未激活，1-正常，2-禁用|query|true|integer(int32)||
 
 
 **响应状态**:
@@ -9180,7 +9945,7 @@
 ## 批量删除用户
 
 
-**接口地址**:`/api/users/batch`
+**接口地址**:`/api/admin/users/batch`
 
 
 **请求方式**:`DELETE`
