feat: optimize user profile with sticky notes layout

--- a/全部接口.md
+++ b/全部接口.md
@@ -3468,6 +3468,219 @@
 ```
 
 
+## 获取指定用户的留言
+
+
+**接口地址**:`/api/users/{studentId}/messages`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>根据学号获取该用户发布的留言列表</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|studentId|学号|path|true|string||
+|page|页码|query|false|integer(int32)||
+|size|每页数量|query|false|integer(int32)||
+|Authorization||header|false|string||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|ApiResponsePageSeniorMessageVO|
+|404|用户不存在|ApiResponsePageSeniorMessageVO|
+
+
+**响应状态码-200**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;records||array|SeniorMessageVO|
+|&emsp;&emsp;&emsp;&emsp;id|ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;content|留言内容|string||
+|&emsp;&emsp;&emsp;&emsp;signature|署名|string||
+|&emsp;&emsp;&emsp;&emsp;cardColor|便签颜色|string||
+|&emsp;&emsp;&emsp;&emsp;inkColor|墨水颜色|string||
+|&emsp;&emsp;&emsp;&emsp;font||FontInfo|FontInfo|
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;id|字体ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;name|字体名称|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;cssClass|CSS类名|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;fontFamily|font-family值|string||
+|&emsp;&emsp;&emsp;&emsp;likeCount|点赞数|integer(int32)||
+|&emsp;&emsp;&emsp;&emsp;liked|当前用户是否已点赞|boolean||
+|&emsp;&emsp;&emsp;&emsp;createdAt|创建时间|string(date-time)||
+|&emsp;&emsp;total||integer(int64)||
+|&emsp;&emsp;size||integer(int64)||
+|&emsp;&emsp;current||integer(int64)||
+|&emsp;&emsp;orders||array|OrderItem|
+|&emsp;&emsp;&emsp;&emsp;column||string||
+|&emsp;&emsp;&emsp;&emsp;asc||boolean||
+|&emsp;&emsp;optimizeCountSql||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;searchCount||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;optimizeJoinOfCountSql||boolean||
+|&emsp;&emsp;maxLimit||integer(int64)||
+|&emsp;&emsp;countId||string||
+|&emsp;&emsp;pages||integer(int64)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"records": [
+			{
+				"id": 0,
+				"content": "",
+				"signature": "",
+				"cardColor": "",
+				"inkColor": "",
+				"font": {
+					"id": 0,
+					"name": "",
+					"cssClass": "",
+					"fontFamily": ""
+				},
+				"likeCount": 0,
+				"liked": true,
+				"createdAt": ""
+			}
+		],
+		"total": 0,
+		"size": 0,
+		"current": 0,
+		"orders": [
+			{
+				"column": "",
+				"asc": true
+			}
+		],
+		"optimizeCountSql": {},
+		"searchCount": {},
+		"optimizeJoinOfCountSql": true,
+		"maxLimit": 0,
+		"countId": "",
+		"pages": 0
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-404**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;records||array|SeniorMessageVO|
+|&emsp;&emsp;&emsp;&emsp;id|ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;content|留言内容|string||
+|&emsp;&emsp;&emsp;&emsp;signature|署名|string||
+|&emsp;&emsp;&emsp;&emsp;cardColor|便签颜色|string||
+|&emsp;&emsp;&emsp;&emsp;inkColor|墨水颜色|string||
+|&emsp;&emsp;&emsp;&emsp;font||FontInfo|FontInfo|
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;id|字体ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;name|字体名称|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;cssClass|CSS类名|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;fontFamily|font-family值|string||
+|&emsp;&emsp;&emsp;&emsp;likeCount|点赞数|integer(int32)||
+|&emsp;&emsp;&emsp;&emsp;liked|当前用户是否已点赞|boolean||
+|&emsp;&emsp;&emsp;&emsp;createdAt|创建时间|string(date-time)||
+|&emsp;&emsp;total||integer(int64)||
+|&emsp;&emsp;size||integer(int64)||
+|&emsp;&emsp;current||integer(int64)||
+|&emsp;&emsp;orders||array|OrderItem|
+|&emsp;&emsp;&emsp;&emsp;column||string||
+|&emsp;&emsp;&emsp;&emsp;asc||boolean||
+|&emsp;&emsp;optimizeCountSql||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;searchCount||PageSeniorMessageVO|PageSeniorMessageVO|
+|&emsp;&emsp;optimizeJoinOfCountSql||boolean||
+|&emsp;&emsp;maxLimit||integer(int64)||
+|&emsp;&emsp;countId||string||
+|&emsp;&emsp;pages||integer(int64)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"records": [
+			{
+				"id": 0,
+				"content": "",
+				"signature": "",
+				"cardColor": "",
+				"inkColor": "",
+				"font": {
+					"id": 0,
+					"name": "",
+					"cssClass": "",
+					"fontFamily": ""
+				},
+				"likeCount": 0,
+				"liked": true,
+				"createdAt": ""
+			}
+		],
+		"total": 0,
+		"size": 0,
+		"current": 0,
+		"orders": [
+			{
+				"column": "",
+				"asc": true
+			}
+		],
+		"optimizeCountSql": {},
+		"searchCount": {},
+		"optimizeJoinOfCountSql": true,
+		"maxLimit": 0,
+		"countId": "",
+		"pages": 0
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
 ## 获取我的留言
 
 
