fix: restore dynamic news fetching and previous home page layout

--- a/全部接口.md
+++ b/全部接口.md
@@ -3471,7 +3471,7 @@
 ## 获取指定用户的留言
 
 
-**接口地址**:`/api/users/{studentId}/messages`
+**接口地址**:`/api/messages/user/{studentId}`
 
 
 **请求方式**:`GET`
@@ -7623,6 +7623,501 @@
 			}
 		]
 	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+# 学院动态
+
+
+## 获取文章列表
+
+
+**接口地址**:`/api/article`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>分页获取已发布的文章列表</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|page|页码|query|false|integer(int32)||
+|size|每页数量|query|false|integer(int32)||
+|keyword|搜索关键词|query|false|string||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|OK|ApiResponsePageArticleVO|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||PageArticleVO|PageArticleVO|
+|&emsp;&emsp;records||array|ArticleVO|
+|&emsp;&emsp;&emsp;&emsp;id|ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;title|标题|string||
+|&emsp;&emsp;&emsp;&emsp;subtitle|副标题|string||
+|&emsp;&emsp;&emsp;&emsp;author|作者|string||
+|&emsp;&emsp;&emsp;&emsp;publishDate|发布日期|string(date)||
+|&emsp;&emsp;&emsp;&emsp;readTime|阅读时长|string||
+|&emsp;&emsp;&emsp;&emsp;coverImage|封面图片URL|string||
+|&emsp;&emsp;&emsp;&emsp;tags|标签列表|array|string|
+|&emsp;&emsp;&emsp;&emsp;content|HTML内容|string||
+|&emsp;&emsp;&emsp;&emsp;viewCount|浏览次数|integer(int32)||
+|&emsp;&emsp;&emsp;&emsp;status|状态: 0-草稿, 1-已发布, 2-已下架|integer(int32)||
+|&emsp;&emsp;&emsp;&emsp;createdAt|创建时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;updatedAt|更新时间|string(date-time)||
+|&emsp;&emsp;total||integer(int64)||
+|&emsp;&emsp;size||integer(int64)||
+|&emsp;&emsp;current||integer(int64)||
+|&emsp;&emsp;orders||array|OrderItem|
+|&emsp;&emsp;&emsp;&emsp;column||string||
+|&emsp;&emsp;&emsp;&emsp;asc||boolean||
+|&emsp;&emsp;optimizeCountSql||PageArticleVO|PageArticleVO|
+|&emsp;&emsp;searchCount||PageArticleVO|PageArticleVO|
+|&emsp;&emsp;optimizeJoinOfCountSql||boolean||
+|&emsp;&emsp;maxLimit||integer(int64)||
+|&emsp;&emsp;countId||string||
+|&emsp;&emsp;pages||integer(int64)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"records": [
+			{
+				"id": 0,
+				"title": "",
+				"subtitle": "",
+				"author": "",
+				"publishDate": "",
+				"readTime": "",
+				"coverImage": "",
+				"tags": [],
+				"content": "",
+				"viewCount": 0,
+				"status": 0,
+				"createdAt": "",
+				"updatedAt": ""
+			}
+		],
+		"total": 0,
+		"size": 0,
+		"current": 0,
+		"orders": [
+			{
+				"column": "",
+				"asc": true
+			}
+		],
+		"optimizeCountSql": {},
+		"searchCount": {},
+		"optimizeJoinOfCountSql": true,
+		"maxLimit": 0,
+		"countId": "",
+		"pages": 0
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+## 创建文章
+
+
+**接口地址**:`/api/article`
+
+
+**请求方式**:`POST`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded,application/json`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>创建新的学院动态文章（需要管理员权限）</p>
+
+
+
+**请求示例**:
+
+
+```javascript
+{
+  "title": "",
+  "subtitle": "",
+  "author": "",
+  "publishDate": "",
+  "readTime": "",
+  "coverImage": "",
+  "tags": [],
+  "content": "",
+  "status": 0
+}
+```
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|articleRequest|创建/更新学院动态请求|body|true|ArticleRequest|ArticleRequest|
+|&emsp;&emsp;title|标题||true|string||
+|&emsp;&emsp;subtitle|副标题||false|string||
+|&emsp;&emsp;author|作者||false|string||
+|&emsp;&emsp;publishDate|发布日期||false|string(date)||
+|&emsp;&emsp;readTime|阅读时长||false|string||
+|&emsp;&emsp;coverImage|封面图片URL||false|string||
+|&emsp;&emsp;tags|标签列表||false|array|string|
+|&emsp;&emsp;content|HTML内容||false|string||
+|&emsp;&emsp;status|状态: 0-草稿, 1-已发布, 2-已下架||false|integer(int32)||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|OK|ApiResponseArticleVO|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||ArticleVO|ArticleVO|
+|&emsp;&emsp;id|ID|integer(int64)||
+|&emsp;&emsp;title|标题|string||
+|&emsp;&emsp;subtitle|副标题|string||
+|&emsp;&emsp;author|作者|string||
+|&emsp;&emsp;publishDate|发布日期|string(date)||
+|&emsp;&emsp;readTime|阅读时长|string||
+|&emsp;&emsp;coverImage|封面图片URL|string||
+|&emsp;&emsp;tags|标签列表|array|string|
+|&emsp;&emsp;content|HTML内容|string||
+|&emsp;&emsp;viewCount|浏览次数|integer(int32)||
+|&emsp;&emsp;status|状态: 0-草稿, 1-已发布, 2-已下架|integer(int32)||
+|&emsp;&emsp;createdAt|创建时间|string(date-time)||
+|&emsp;&emsp;updatedAt|更新时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"id": 0,
+		"title": "",
+		"subtitle": "",
+		"author": "",
+		"publishDate": "",
+		"readTime": "",
+		"coverImage": "",
+		"tags": [],
+		"content": "",
+		"viewCount": 0,
+		"status": 0,
+		"createdAt": "",
+		"updatedAt": ""
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+## 获取文章详情
+
+
+**接口地址**:`/api/article/{articleId}`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>根据ID获取文章详情，同时增加浏览次数</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|articleId|文章ID|path|true|integer(int64)||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|OK|ApiResponseArticleVO|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||ArticleVO|ArticleVO|
+|&emsp;&emsp;id|ID|integer(int64)||
+|&emsp;&emsp;title|标题|string||
+|&emsp;&emsp;subtitle|副标题|string||
+|&emsp;&emsp;author|作者|string||
+|&emsp;&emsp;publishDate|发布日期|string(date)||
+|&emsp;&emsp;readTime|阅读时长|string||
+|&emsp;&emsp;coverImage|封面图片URL|string||
+|&emsp;&emsp;tags|标签列表|array|string|
+|&emsp;&emsp;content|HTML内容|string||
+|&emsp;&emsp;viewCount|浏览次数|integer(int32)||
+|&emsp;&emsp;status|状态: 0-草稿, 1-已发布, 2-已下架|integer(int32)||
+|&emsp;&emsp;createdAt|创建时间|string(date-time)||
+|&emsp;&emsp;updatedAt|更新时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"id": 0,
+		"title": "",
+		"subtitle": "",
+		"author": "",
+		"publishDate": "",
+		"readTime": "",
+		"coverImage": "",
+		"tags": [],
+		"content": "",
+		"viewCount": 0,
+		"status": 0,
+		"createdAt": "",
+		"updatedAt": ""
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+## 更新文章
+
+
+**接口地址**:`/api/article/{articleId}`
+
+
+**请求方式**:`PUT`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded,application/json`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>更新指定ID的文章（需要管理员权限）</p>
+
+
+
+**请求示例**:
+
+
+```javascript
+{
+  "title": "",
+  "subtitle": "",
+  "author": "",
+  "publishDate": "",
+  "readTime": "",
+  "coverImage": "",
+  "tags": [],
+  "content": "",
+  "status": 0
+}
+```
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|articleId|文章ID|path|true|integer(int64)||
+|articleRequest|创建/更新学院动态请求|body|true|ArticleRequest|ArticleRequest|
+|&emsp;&emsp;title|标题||true|string||
+|&emsp;&emsp;subtitle|副标题||false|string||
+|&emsp;&emsp;author|作者||false|string||
+|&emsp;&emsp;publishDate|发布日期||false|string(date)||
+|&emsp;&emsp;readTime|阅读时长||false|string||
+|&emsp;&emsp;coverImage|封面图片URL||false|string||
+|&emsp;&emsp;tags|标签列表||false|array|string|
+|&emsp;&emsp;content|HTML内容||false|string||
+|&emsp;&emsp;status|状态: 0-草稿, 1-已发布, 2-已下架||false|integer(int32)||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|OK|ApiResponseArticleVO|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||ArticleVO|ArticleVO|
+|&emsp;&emsp;id|ID|integer(int64)||
+|&emsp;&emsp;title|标题|string||
+|&emsp;&emsp;subtitle|副标题|string||
+|&emsp;&emsp;author|作者|string||
+|&emsp;&emsp;publishDate|发布日期|string(date)||
+|&emsp;&emsp;readTime|阅读时长|string||
+|&emsp;&emsp;coverImage|封面图片URL|string||
+|&emsp;&emsp;tags|标签列表|array|string|
+|&emsp;&emsp;content|HTML内容|string||
+|&emsp;&emsp;viewCount|浏览次数|integer(int32)||
+|&emsp;&emsp;status|状态: 0-草稿, 1-已发布, 2-已下架|integer(int32)||
+|&emsp;&emsp;createdAt|创建时间|string(date-time)||
+|&emsp;&emsp;updatedAt|更新时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"id": 0,
+		"title": "",
+		"subtitle": "",
+		"author": "",
+		"publishDate": "",
+		"readTime": "",
+		"coverImage": "",
+		"tags": [],
+		"content": "",
+		"viewCount": 0,
+		"status": 0,
+		"createdAt": "",
+		"updatedAt": ""
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+## 删除文章
+
+
+**接口地址**:`/api/article/{articleId}`
+
+
+**请求方式**:`DELETE`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>删除指定ID的文章（需要管理员权限）</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|articleId|文章ID|path|true|integer(int64)||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|OK|ApiResponseVoid|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data|响应数据|object||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {},
 	"error": "VALIDATION_ERROR",
 	"message": "邮箱格式不正确",
 	"path": "/api/users",
