feat: implement admin dashboard with real API data and SVG trend charts

--- a/全部接口.md
+++ b/全部接口.md
@@ -8408,6 +8408,314 @@
 ```
 
 
+# 仪表盘管理
+
+
+## 获取仪表盘数据
+
+
+**接口地址**:`/api/admin/dashboard`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>获取管理面板仪表盘的统计数据、待处理项、趋势图表和系统状态</p>
+
+
+
+**请求参数**:
+
+
+暂无
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|ApiResponseDashboardVO|
+|401|未登录|ApiResponseDashboardVO|
+|403|权限不足|ApiResponseDashboardVO|
+
+
+**响应状态码-200**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||DashboardVO|DashboardVO|
+|&emsp;&emsp;statCard||StatCard|StatCard|
+|&emsp;&emsp;&emsp;&emsp;totalUsers|用户总数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;newUsersToday|今日新增用户|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;totalArticles|文章总数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;publishedArticles|已发布文章数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;totalGalleryImages|图片总数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;totalMessages|留言总数|integer(int64)||
+|&emsp;&emsp;pendingItems||PendingItems|PendingItems|
+|&emsp;&emsp;&emsp;&emsp;pendingMessages|待审核留言数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;pendingImages|待审核图片数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;disabledUsers|禁用用户数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;draftArticles|草稿文章数|integer(int64)||
+|&emsp;&emsp;trendData||TrendData|TrendData|
+|&emsp;&emsp;&emsp;&emsp;userTrend|最近7天用户增长趋势|array|DailyCount|
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;date|日期 (yyyy-MM-dd)|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;count|数量|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;articleTrend|最近7天文章增长趋势|array|DailyCount|
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;date|日期 (yyyy-MM-dd)|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;count|数量|integer(int64)||
+|&emsp;&emsp;systemStatus||SystemStatus|SystemStatus|
+|&emsp;&emsp;&emsp;&emsp;serverTime|服务器时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;jvmMemoryUsed|JVM已用内存(MB)|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;jvmMemoryMax|JVM最大内存(MB)|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;cpuCores|CPU核心数|integer(int32)||
+|&emsp;&emsp;&emsp;&emsp;osName|操作系统|string||
+|&emsp;&emsp;&emsp;&emsp;javaVersion|Java版本|string||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"statCard": {
+			"totalUsers": 0,
+			"newUsersToday": 0,
+			"totalArticles": 0,
+			"publishedArticles": 0,
+			"totalGalleryImages": 0,
+			"totalMessages": 0
+		},
+		"pendingItems": {
+			"pendingMessages": 0,
+			"pendingImages": 0,
+			"disabledUsers": 0,
+			"draftArticles": 0
+		},
+		"trendData": {
+			"userTrend": [
+				{
+					"date": "",
+					"count": 0
+				}
+			],
+			"articleTrend": [
+				{
+					"date": "",
+					"count": 0
+				}
+			]
+		},
+		"systemStatus": {
+			"serverTime": "",
+			"jvmMemoryUsed": 0,
+			"jvmMemoryMax": 0,
+			"cpuCores": 0,
+			"osName": "",
+			"javaVersion": ""
+		}
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-401**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||DashboardVO|DashboardVO|
+|&emsp;&emsp;statCard||StatCard|StatCard|
+|&emsp;&emsp;&emsp;&emsp;totalUsers|用户总数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;newUsersToday|今日新增用户|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;totalArticles|文章总数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;publishedArticles|已发布文章数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;totalGalleryImages|图片总数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;totalMessages|留言总数|integer(int64)||
+|&emsp;&emsp;pendingItems||PendingItems|PendingItems|
+|&emsp;&emsp;&emsp;&emsp;pendingMessages|待审核留言数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;pendingImages|待审核图片数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;disabledUsers|禁用用户数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;draftArticles|草稿文章数|integer(int64)||
+|&emsp;&emsp;trendData||TrendData|TrendData|
+|&emsp;&emsp;&emsp;&emsp;userTrend|最近7天用户增长趋势|array|DailyCount|
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;date|日期 (yyyy-MM-dd)|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;count|数量|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;articleTrend|最近7天文章增长趋势|array|DailyCount|
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;date|日期 (yyyy-MM-dd)|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;count|数量|integer(int64)||
+|&emsp;&emsp;systemStatus||SystemStatus|SystemStatus|
+|&emsp;&emsp;&emsp;&emsp;serverTime|服务器时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;jvmMemoryUsed|JVM已用内存(MB)|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;jvmMemoryMax|JVM最大内存(MB)|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;cpuCores|CPU核心数|integer(int32)||
+|&emsp;&emsp;&emsp;&emsp;osName|操作系统|string||
+|&emsp;&emsp;&emsp;&emsp;javaVersion|Java版本|string||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"statCard": {
+			"totalUsers": 0,
+			"newUsersToday": 0,
+			"totalArticles": 0,
+			"publishedArticles": 0,
+			"totalGalleryImages": 0,
+			"totalMessages": 0
+		},
+		"pendingItems": {
+			"pendingMessages": 0,
+			"pendingImages": 0,
+			"disabledUsers": 0,
+			"draftArticles": 0
+		},
+		"trendData": {
+			"userTrend": [
+				{
+					"date": "",
+					"count": 0
+				}
+			],
+			"articleTrend": [
+				{
+					"date": "",
+					"count": 0
+				}
+			]
+		},
+		"systemStatus": {
+			"serverTime": "",
+			"jvmMemoryUsed": 0,
+			"jvmMemoryMax": 0,
+			"cpuCores": 0,
+			"osName": "",
+			"javaVersion": ""
+		}
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-403**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||DashboardVO|DashboardVO|
+|&emsp;&emsp;statCard||StatCard|StatCard|
+|&emsp;&emsp;&emsp;&emsp;totalUsers|用户总数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;newUsersToday|今日新增用户|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;totalArticles|文章总数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;publishedArticles|已发布文章数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;totalGalleryImages|图片总数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;totalMessages|留言总数|integer(int64)||
+|&emsp;&emsp;pendingItems||PendingItems|PendingItems|
+|&emsp;&emsp;&emsp;&emsp;pendingMessages|待审核留言数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;pendingImages|待审核图片数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;disabledUsers|禁用用户数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;draftArticles|草稿文章数|integer(int64)||
+|&emsp;&emsp;trendData||TrendData|TrendData|
+|&emsp;&emsp;&emsp;&emsp;userTrend|最近7天用户增长趋势|array|DailyCount|
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;date|日期 (yyyy-MM-dd)|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;count|数量|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;articleTrend|最近7天文章增长趋势|array|DailyCount|
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;date|日期 (yyyy-MM-dd)|string||
+|&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;count|数量|integer(int64)||
+|&emsp;&emsp;systemStatus||SystemStatus|SystemStatus|
+|&emsp;&emsp;&emsp;&emsp;serverTime|服务器时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;jvmMemoryUsed|JVM已用内存(MB)|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;jvmMemoryMax|JVM最大内存(MB)|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;cpuCores|CPU核心数|integer(int32)||
+|&emsp;&emsp;&emsp;&emsp;osName|操作系统|string||
+|&emsp;&emsp;&emsp;&emsp;javaVersion|Java版本|string||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"statCard": {
+			"totalUsers": 0,
+			"newUsersToday": 0,
+			"totalArticles": 0,
+			"publishedArticles": 0,
+			"totalGalleryImages": 0,
+			"totalMessages": 0
+		},
+		"pendingItems": {
+			"pendingMessages": 0,
+			"pendingImages": 0,
+			"disabledUsers": 0,
+			"draftArticles": 0
+		},
+		"trendData": {
+			"userTrend": [
+				{
+					"date": "",
+					"count": 0
+				}
+			],
+			"articleTrend": [
+				{
+					"date": "",
+					"count": 0
+				}
+			]
+		},
+		"systemStatus": {
+			"serverTime": "",
+			"jvmMemoryUsed": 0,
+			"jvmMemoryMax": 0,
+			"cpuCores": 0,
+			"osName": "",
+			"javaVersion": ""
+		}
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
 # 用户
 
 
